#8 Fixing columns on footer at mobile. Removing footer logo on mobile #9

--- a/static/scss/base/_footer.scss
+++ b/static/scss/base/_footer.scss
@@ -40,7 +40,10 @@
       float: left;
       width: 100%;
       padding-top: 20px;
-      background: url('../media/logos/logo-ubuntu-grey.png') 100% 20px no-repeat;
+
+      @media only screen and (min-width: 768px) {
+        background: url('../media/logos/logo-ubuntu-grey.png') 100% 20px no-repeat;
+      }
 
       .footer__legal-text {
         color: $warm-grey;
@@ -74,6 +77,16 @@
           content: '';
         }
       }
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    .footer__col {
+      margin: 0;
+      padding: 0 10px;
+      width: 50%;
+      box-sizing: border-box;
+      float: left;
     }
   }
 }
